Defect Fix
#54- State drop down not showing label and font not matching with other screens

#61 - Admin-Payment info-legal contact FN and LN by default taking as null. DOB validation message to be corrected

--- a/src/admin-app/styles.css
+++ b/src/admin-app/styles.css
@@ -48,8 +48,11 @@ html, body, div, img {
   padding: 0; }
 
 html {
-  height: 100%; }
-
+  height: 100%; 
+}
+button, input, optgroup, select, textarea{
+    font-family:open_sansregular !important;
+}
 body {
     font-family:open_sansregular;
     font-size:14px;
@@ -205,7 +208,7 @@ a.categ_close{
     padding-left:10px;
 }
 .ddl_default{
-    font-size:13px;
+    font-size:14px;
     padding:5px;
 }
 .accountInfo .title span{
